--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* .nav-linkmain {
+ font-size: 23px;
+ text-decoration: none;
+} */
+.nav-item{
+  margin-right: 5px;
+  font-size: 16px;
+  text-decoration: none;
+}
