--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,30 @@
   }
 }
 
-
-/* .nav-linkmain {
- font-size: 23px;
- text-decoration: none;
-} */
 .nav-item{
   margin-right: 5px;
   font-size: 16px;
   text-decoration: none;
+}
+
+@media screen and (max-width:950px) and (min-width:330px){
+.card text-bg-dark{
+  max-height: 500px;
+}
+.card-img{
+  height: 400px;
+}
+.card-img-top{
+  width: 200px;
+  height: 150px;
+}
+}
+
+@media  screen and (max-width:988px) {
+.image{
+  width: 75%;
+  height: 80%;
+  
+}
+  
 }
