--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,16 @@
   text-decoration: none;
 }
 
-@media screen and (max-width:950px) and (min-width:330px){
+.lalacard{
+
+  position: absolute;
+ margin-left:600px;
+ margin-top: 150px;
+  z-index: 1;
+}
+
+
+@media screen and (max-width:992px) and (min-width:330px){
 .card text-bg-dark{
   max-height: 500px;
 }
@@ -51,9 +60,10 @@
   height: 400px;
 }
 .card-img-top{
-  width: 200px;
-  height: 150px;
+  width: 300px;
+  height: 200px;
 }
+
 }
 
 @media  screen and (max-width:988px) {
@@ -63,4 +73,13 @@
   
 }
   
+}
+
+@media screen and (max-width:764px) {
+  .card h-100 text-center p-4 a{
+    width: 400px;
+  }
+  .car-img-top{
+    width: 400px;
+  }
 }
